2004-11-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Apply first patch toward better string comparison when dealing with broken 
    DICOM files. Essentially the string could be padded with a space instead 
    of a null character as defined by standard
  
2004-11-15 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmDocument.[cxx|h] : fix memory leaks. The return is suppressed
    because never used... and in the same time, that's remove some memory leaks

2004-11-15 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmFile.cxx : now delete the PixelConvert instance.
  * In examples and tests : change the type of image data variables from void*
    to uint8_t*. Remmove all delete on image data variables

2004-11-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx : Set the file pointer TP to 0 in the constructors.
    Verify the file pointer value before open the file, and if it's not null,
    a verbose message is generated.
    Close correctly the file when the file isn't considered dicom-like. The
    correctly close is a call to CloseFile.
    When closing the file pointer, test if its not null to close the file.
  * src/gdcmPixelConvert.cxx : bug fix for the SIEMENS_GBS_III-16-ACR_NEMA_1.acr
    file. For an uncompressed image, the copied datas correspond in the least 
    case to the image size (calculated) or the image size specified in the 
    header. A verbose is generated if these two size mismatch

2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * Test/TestAllReadCompareDicom.cxx : test the existence of the directory
    using an 'ifstream' other than a 'FILE *'. The previous solution ('FILE *')
    break under windows (with msvc6 compilation).

2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmDicomDir.h : bug fix for the last Boix's commit (problem when
    compiling with MSVC6)
